--- a/src/posten/_config/variables.css
+++ b/src/posten/_config/variables.css
@@ -8,7 +8,7 @@
    */
 
   --hw-color-primary: #e32d22;
-  --hw-color-primary-dark: #cd291f;
+  --hw-color-primary-dark: #980000;
   --hw-color-primary-darker: #562022;
   --hw-color-primary-light: #f98c87;
   --hw-color-primary-lighter: #fec4c2;
@@ -22,7 +22,7 @@
     * Link Colors
     */
 
-  --hw-color-link: #cd291f;
+  --hw-color-link: #980000;
   --hw-color-link-underline: rgba(227, 45, 34, 0.25);
   --hw-color-link-hover: #000;
   --hw-color-link-underline-hover: #000;
